2003-11-17  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/local/camel-mbox-store.c (create_folder): Fixed an
	exception to give a more meaningful description.

2003-11-14  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/local/camel-mbox-store.c (get_folder_info): Handle ""
	as a request for a full dirscan as well (not just NULL). Makes it
	consistant with other stores.
	(scan_dir): Set the fi->flags appropriately.

	* providers/local/camel-mbox-folder.c
	(camel_mbox_folder_get_full_path): Removed temporary hack.

2003-11-14  Not Zed  <NotZed@Ximian.com>

	* camel-mime-parser.c (SCAN_BUF): oops, put the mempool stuff
	back, we don't use e-memory afterall.  Damn plane hacking.

2003-11-13  Not Zed  <NotZed@Ximian.com>

	* camel-mime-parser.c: Remove mempool code, we use the stuff in
	e-util.
	(PRESERVE_HEADERS): new compile option, if on, we preserve headers
	and folding exactly rather than unfolding all input.  THIS BREAKS
	EVERYTHING right now, so don't turn it on.

	* camel-gpg-context.c (gpg_decrypt): reset the input memstream
	before passing it to the gpg engine.

	* tests/smime/pgp-mime.c (main): redirect /dev/null to stdin so it
	doesn't hang waiting for input.
	(main): removed from build - this tests multipart/signed
	explictly, but now the details of this is handled directly by the
	cipher context.

	* tests/smime/pgp.c (main): fixes for api changes.
	(main): redirect /dev/null to stdin so it doesn't hang waiting for
	input.

	* tests/message/test1.c (main): update for api changes.

	* camel-smime-context.c (sm_verify): look at the content object's
	mime type, not the container's type.

2003-11-11  Not Zed  <NotZed@Ximian.com>

	* camel-cipher-context.c (camel_cipher_validity_set_valid): take
	into account the @valid argument and set validity properly.
	(camel_cipher_validity_clone): new method to copy validities.

	* camel-smime-context.c (sm_signing_cmsmessage): removed a todo.

2003-11-10  Not Zed  <NotZed@Ximian.com>
